# selenium-rs

./: .devcontainer.json  .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: release.yml
src/: actions.rs  driver.rs  element.rs  http.rs  lib.rs  option.rs  shadow.rs
src/option/: chrome.rs  edge.rs  firefox.rs  mod.rs  safari.rs
tests/: actions.rs  driver.rs  elements.rs
tests/common/: mod.rs  test.html
